--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,9 +10,6 @@ body {
 	margin: 0 auto;
 }
 
-.m-30{
-	margin: 30px 0;
-}
 
 form.form-signin input.form-control,
 form.form-signup input.form-control{
@@ -86,4 +83,10 @@ tr.saveprofile{
 }
 form.editprofile > input{
 	border-radius: 4px;
+}
+
+
+table#new,
+button.saveMe{
+	display:none;
 }
